<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CalendarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/customeblue"
            android:scrollbars="horizontal"
            app:tabMode="scrollable"
            app:tabIndicatorColor="@color/white"
            app:tabSelectedTextColor="@color/drawer_item_text"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boyshik" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jaista" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ashar" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sarabon" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vadro" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ashin" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kartik" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agroyan" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pos" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magh" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/falgun" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chatro" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</LinearLayout>